--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.3",
     "@studio-freight/lenis": "^1.0.42",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
