--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
     "@studio-freight/lenis": "^1.0.42",
+    "date-fns": "^4.1.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.545.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
