--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
     "@studio-freight/lenis": "^1.0.42",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.545.0",
     "mongodb": "^6.20.0",
@@ -19,7 +22,9 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-spinners": "^0.17.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
