--- a/package.json
+++ b/package.json
@@ -4,27 +4,32 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --no-lint --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
+    "@emotion/react": "^11.14.0",
+    "@gsap/react": "^2.1.2",
     "@studio-freight/lenis": "^1.0.42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "gsap": "^3.13.0",
-    "lenis": "^1.3.11",
+    "lenis": "^1.3.14",
     "lucide-react": "^0.545.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-spinners": "^0.17.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vercel": "^48.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
